--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>Sign up</button>
             </div>
             <div class="hero-right">
-                <img src="" alt="an image of the website from odin">
+                <img src="./images/gray.png" alt="an image of the website from odin">
             </div>
         </section>
         <section class="card-container">
