--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                 <img src="./images/gray.png" alt="an image of the website from odin">
             </div>
         </section>
-        <section class="card-container">
+        <section class="information">
             <h2>Some random information</h2>
-            <div class="card"><img src="" alt="an image of the color">this color is called</div>
-            <div class="card"><img src="" alt="an image of the color">this color is called</div>
-            <div class="card"><img src="" alt="an image of the color">this color is called</div>
-            <div class="card"><img src="" alt="an image of the color">this color is called</div>
+            <div class="card-container">
+                <div class="card"><img src="" alt="an image of the color">this color is called</div>
+                <div class="card"><img src="" alt="an image of the color">this color is called</div>
+                <div class="card"><img src="" alt="an image of the color">this color is called</div>
+                <div class="card"><img src="" alt="an image of the color">this color is called</div>
+            </div>
         </section>
         <section class="quote">
             <p>sometimes it works, sometimes it doesn't</p>
