--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <section class="information">
             <h2>Some random information</h2>
             <div class="card-container">
-                <div class="card"><img src="" alt="an image of the color">this color is called</div>
-                <div class="card"><img src="" alt="an image of the color">this color is called</div>
-                <div class="card"><img src="" alt="an image of the color">this color is called</div>
-                <div class="card"><img src="" alt="an image of the color">this color is called</div>
+                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called blue</div>
+                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called red</div>
+                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called green</div>
+                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called yellow</div>
             </div>
         </section>
         <section class="quote">
