Style the quote section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </div>
         </section>
         <section class="quote">
-            <p>sometimes it works, sometimes it doesn't</p>
-            <h4>-SunTzu, The Art of War</h4>
+            <p><em>sometimes it works, sometimes it doesn't</em></p>
+            <h4>-SunTzu, The Art of War (not really...)</h4>
         </section>
         <section class="cta">
             <div class="left-cta">
