Add color images, fix height of info images

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <section class="information">
             <h2>Some random information</h2>
             <div class="card-container">
-                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called blue</div>
-                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called red</div>
-                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called green</div>
-                <div class="card"><img src="./images/gray.png" alt="an image of the color">this color is called yellow</div>
+                <div class="card"><img src="./images/blue.png" alt="an image of the color blue">this color is called blue</div>
+                <div class="card"><img src="./images/red.png" alt="an image of the color red">this color is called red</div>
+                <div class="card"><img src="./images/green.png" alt="an image of the color green">this color is called green</div>
+                <div class="card"><img src="./images/yellow.png" alt="an image of the color yellow">this color is called yellow</div>
             </div>
         </section>
         <section class="quote">
